--- a/Maintenance/test_handling/testsuite_comparison/testresult.css
+++ b/Maintenance/test_handling/testsuite_comparison/testresult.css
@@ -16,27 +16,19 @@ TABLE.result TD,TABLE.summary TD { border-width: 1px; border-style: solid; }
 TABLE.result TD { padding: 0;}
 TABLE.result TD > a { font-weight: normal; font-family: monospace; display: block; padding: 0.2ex 0.5ex 0.2ex 0.5ex;}
 
-TABLE.beside TABLE { border-collapse: collapse; font-family: monospace; }
-
-TABLE.beside TABLE TD { padding: 0.2ex 0.5ex 0.2ex 0.5ex; }
-
 TD.highlight {background-color: rgb(80%,80%,80%)}
 TD.os64bits {font-style:italic}
 .cmaketag {font-weight: bold; color: rgb(100%,20%,20%);}
 
 
-TD.ok {background-color: rgb(44%,88%,44%)}
+TD.ok {background-color: rgb(50%,100%,50%)}
 TD.warning {background-color: rgb(100%,100%,50%)}
-TD.third_party_warning {background-color: rgb(75%,100%,50%)}
-TD.timeout {background-color: rgb(100%,75%,25%)}
 TD.error {background-color: rgb(100%,50%,50%)}
 TD.na {background-color: white;}
 TD.requirements { background-color: rgb(65%,65%,100%) }
 
-TH.ok {background-color: rgb(44%,88%,44%)}
+TH.ok {background-color: rgb(50%,100%,50%)}
 TH.warning {background-color: rgb(100%,100%,50%)}
-TH.third_party_warning {background-color: rgb(75%,100%,50%)}
-TH.timeout {background-color: rgb(100%,75%,25%)}
 TH.error {background-color: rgb(100%,50%,50%)}
 TH.requirements { background-color: rgb(65%,65%,100%) }
 
@@ -48,14 +40,6 @@ TD.warning A {font-size:large; text-decoration: none}
 TD.warning A:link {color: rgb(0%,0%,100%)}
 TD.warning A:visited {color: rgb(80%,80%,100%)}
 
-TD.third_party_warning A {font-size:large; text-decoration: none}
-TD.third_party_warning A:link {color: rgb(0%,0%,100%)}
-TD.third_party_warning A:visited {color: rgb(80%,80%,100%)}
-
-TD.timeout A {font-size:large; text-decoration: none}
-TD.timeout A:link {color: rgb(0%,0%,100%)}
-TD.timeout A:visited {color: rgb(80%,80%,100%)}
-
 TD.error A {font-size: large; text-decoration: none}
 TD.error A:link {color: rgb(0%,0%,100%)}
 TD.error A:visited {color: rgb(80%,0%,100%)}
@@ -66,14 +50,14 @@ TD.requirements A:visited {color: rgb(100%,100%,65%)}
 
 SELECT { font-family: monospace; }
 
-#permalink,#jump_to_results,#compare {
+#permalink,#jump_to_results {
     font-size: 0.5em;
     font-weight: normal;
 }
-#permalink::before,#jump_to_results::before,#compare::before{
+#permalink::before,#jump_to_results::before{
     content: "("
 }
-#permalink::after,#jump_to_results::after,#compare::after{
+#permalink::after,#jump_to_results::after{
     content: ")"
 }
 
