--- a/Polyhedron/demo/Polyhedron/Plugins/Mesh_3/Meshing_dialog.ui
+++ b/Polyhedron/demo/Polyhedron/Plugins/Mesh_3/Meshing_dialog.ui
@@ -141,9 +141,9 @@
        </widget>
       </item>
       <item row="9" column="0">
-       <widget class="QLabel" name="edgeDistancingLabel">
+       <widget class="QLabel" name="edgeApproxLabel">
         <property name="text">
-         <string>Edge distance</string>
+         <string>Edge approximation error</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -207,10 +207,10 @@
        </widget>
       </item>
       <item row="9" column="1">
-       <widget class="DoubleEdit" name="edgeDistancing"/>
+       <widget class="DoubleEdit" name="edgeApprox"/>
       </item>
       <item row="9" column="2">
-       <widget class="QCheckBox" name="noEdgeDistancing">
+       <widget class="QCheckBox" name="noEdgeApprox">
         <property name="text">
          <string/>
         </property>
