--- a/Polyhedron/demo/Polyhedron/Plugins/PMP/ACVD_remeshing_dialog.ui
+++ b/Polyhedron/demo/Polyhedron/Plugins/PMP/ACVD_remeshing_dialog.ui
@@ -7,11 +7,11 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>300</height>
+    <height>241</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>ACVD Simplification</string>
+   <string>ACVD Remeshing</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
@@ -40,6 +40,12 @@
      <property name="text">
       <string>Isotropic Clustering</string>
      </property>
+     <property name="checked">
+      <bool>true</bool>
+     </property>
+     <attribute name="buttonGroup">
+      <string notr="true">buttonGroup</string>
+     </attribute>
     </widget>
    </item>
    <item>
@@ -47,6 +53,9 @@
      <property name="text">
       <string>QEM Clustering</string>
      </property>
+     <attribute name="buttonGroup">
+      <string notr="true">buttonGroup</string>
+     </attribute>
     </widget>
    </item>
    <item>
@@ -54,13 +63,9 @@
      <property name="text">
       <string>Anisotropic Clustering</string>
      </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QPushButton" name="ACVD_button">
-     <property name="text">
-      <string>ACVD Simplification</string>
-     </property>
+     <attribute name="buttonGroup">
+      <string notr="true">buttonGroup</string>
+     </attribute>
     </widget>
    </item>
    <item>
@@ -117,4 +122,7 @@
    </hints>
   </connection>
  </connections>
+ <buttongroups>
+  <buttongroup name="buttonGroup"/>
+ </buttongroups>
 </ui>
