new version, after review

--- a/Documentation/doc/resources/1.10.0/cgal_stylesheet.css
+++ b/Documentation/doc/resources/1.10.0/cgal_stylesheet.css
@@ -131,6 +131,10 @@ a.el {
     vertical-align:middle;
 }
 
+.PkgImage > .image > img {
+	border-radius: 10%;
+}
+
 .PkgAuthors {
     font-style: italic;
 }
