--- a/Maintenance/test_handling/testresult.css
+++ b/Maintenance/test_handling/testresult.css
@@ -124,27 +124,40 @@ TABLE.result TD > a.package_name {
     border-collapse: collapse;
     margin-top: 10px;
     table-layout: fixed;
+    border: 1px solid #ccc;
 }
 
 .tpl-table th, .tpl-table td {
-    border: 1px solid #e0e0e0; /* Couleur légèrement différente */
-    padding: 4px 8px;
+    border: 1px solid #ddd;
+    padding: 6px 12px;
     text-align: left;
     white-space: nowrap;
 }
 
 .tpl-table tr:nth-child(even) {
-    background-color: #fafafa;
-}
-
-.tpl-table tr:hover {
-    background-color: #f5f5f5;
+    background-color: #a6a6a6;
 }
 
 .tpl-table th {
     padding-top: 8px;
     padding-bottom: 8px;
-    background-color: #f7f7f7;
+    background-color: #a6a6a6;
     color: #333;
     font-weight: normal;
+}
+
+.tpl-toggle-button {
+    display: inline-block;
+    margin-bottom: 10px;
+    padding: 6px 12px;
+    font-size: 14px;
+    color: #333;
+    background-color: #f0f0f0;
+    border: 1px solid #ccc;
+    cursor: pointer;
+    text-align: center;
+}
+
+.tpl-toggle-button:hover {
+    background-color: #e0e0e0;
 }
